user registry mongodb

--- a/views/profile.html
+++ b/views/profile.html
@@ -98,9 +98,9 @@
 										<!--/profile-->
 										<h3 class="sub-tittle pro">Profile</h3>
 									       <div class="profile-widget">
-														<img src="images/admin1.jpg" alt=" " />
-														<h2>Jack Ma</h2>
-														<p>Alibaba</p>
+														<img src="images/admin.png" alt=" " />
+														<h2>{{username}}</h2>
+														<!--<p>Alibaba</p>-->
 													</div>
 														<!--/profile-inner-->
 														 <div class="profile-section-inner">
@@ -206,12 +206,12 @@
 					<div style="border-top:1px solid rgba(69, 74, 84, 0.7)"></div>
 					<!--/down-->
 							<div class="down">
-									<a href="index.html"><span class=" name-caret">Jack Ma</span></a>
-									<p>Alibaba</p>
+									<a href="index.html"><span class=" name-caret">{{username}}</span></a>
+									<!--<p>Alibaba</p>-->
 									<ul>
-										<li><a class="tooltips" href="index.html"><span>Profile</span><i class="lnr lnr-user"></i></a></li>
-										<li><a class="tooltips" href="index.html"><span>Settings</span><i class="lnr lnr-cog"></i></a></li>
-										<li><a class="tooltips" href="index.html"><span>Log out</span><i class="lnr lnr-power-switch"></i></a></li>
+										<li><a class="tooltips" href=""><span>Profile</span><i class="lnr lnr-user"></i></a></li>
+										<li><a class="tooltips" href=""><span>Settings</span><i class="lnr lnr-cog"></i></a></li>
+										<li><a class="tooltips" href="/logout"><span>Log out</span><i class="lnr lnr-power-switch"></i></a></li>
 									</ul>
 							</div>
 							   <!--//down-->
