--- a/views/profile.html
+++ b/views/profile.html
@@ -123,6 +123,72 @@
 																   </div>
 															  </div>
 															   <div class="col-md-6 profile-info two">
+
+
+																   <h3 class="inner-tittle">Push Your Image </h3>
+																   <div class="main-grid3 p-skill">
+
+																	   <ul class="timeline">
+																		   <li>
+																			   <div class="timeline-badge info"><i class="fa fa-smile-o"></i></div>
+																			   <div class="timeline-panel">
+																				   <div class="timeline-heading">
+																					   <h4 class="timeline-title"><a href="profile.html">open your linux shell</a></h4>
+																				   </div>
+																				   <div class="timeline-body">
+																					   <p class="time">Step 1/4</p>
+																					   <!--<p>Commented on your image</p>-->
+																				   </div>
+																			   </div>
+																		   </li>
+
+																		   <li>
+																			   <div class="timeline-badge primary"><i class="fa fa-star-o"></i></div>
+																			   <div class="timeline-panel">
+																				   <div class="timeline-heading">
+																					   <h4 class="timeline-title"><a href="profile.html">$ docker login weare.pub</a></h4>
+																				   </div>
+																				   <div class="timeline-body">
+																					   <p class="time">Step 2/4</p>
+
+																				   </div>
+																			   </div>
+																		   </li>
+
+
+
+																		   <li>
+																			   <div class="timeline-badge danger"><i class="fa fa-times-circle-o"></i></div>
+																			   <div class="timeline-panel">
+																				   <div class="timeline-heading">
+																					   <h4 class="timeline-title"><a href="profile.html">$ docker tag hello-world:latest weare.pub/username/hello:latest</a></h4>
+																				   </div>
+																				   <div class="timeline-body">
+																					   <p class="time">Step 3/4</p>
+
+																				   </div>
+																			   </div>
+																		   </li>
+
+																		   <li>
+																			   <div class="timeline-badge success"><i class="fa fa-check-circle-o"></i></div>
+																			   <div class="timeline-panel">
+																				   <div class="timeline-heading">
+																					   <h4 class="timeline-title"><a href="profile.html">$ docker push weare.pub/username/hello:latest</a></h4>
+																				   </div>
+																				   <div class="timeline-body">
+																					   <p class="time">Step 4/4</p>
+
+																				   </div>
+																			   </div>
+																		   </li>
+																	   </ul>
+																	   <div class="clearfix"></div>
+																   </div>
+
+
+
+																   <!--
 																   <h3 class="inner-tittle">Activity </h3>
 																	<div class="main-grid3 p-skill">
 
@@ -183,6 +249,7 @@
 																			</ul>
 																			<div class="clearfix"></div>
 																		</div>
+																   -->
 															   </div>
 															</div>
 															
