--- a/views/table.html
+++ b/views/table.html
@@ -69,7 +69,7 @@
 																		<tr>
 																			<th scope="row">1</th>
 																			<td>RHEL 7</td>
-																			<td>3.0</td>
+																			<td>latest</td>
 																			<td>docker pull {{image}}</td>
 																		</tr>
 																	</tbody>
