--- a/views/login.html
+++ b/views/login.html
@@ -40,7 +40,7 @@
 																		
 																		<div class="new">
 
-																			<p class="sign">Do not have an account ? <a href="sign.html">Sign Up</a></p>
+																			<p class="sign">Do not have an account ? <a href="/sign">Sign Up</a></p>
 
 																		</div>
 																	</form>
