--- a/views/square.html
+++ b/views/square.html
@@ -58,8 +58,137 @@
 						</ol>
 					</div>
 					<!--//sub-heard-part-->
+
+					<div class="tab-main">
+						<!--/tabs-inner-->
+						<div class="tab-inner">
+							<div id="tabs" class="tabs">
+
+
+									<div class="buttons-ui">
+										<form>
+											<input type="text" style="width:250px;height:46px" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'input image name';}" class="text"/>
+
+										<a class="btn blue">Search</a>
+										</form>
+									</div>
+
+
+
+								<div class="graph">
+									<nav>
+										<ul>
+											<li><a href="#section-1" class="icon-shop"><i class="lnr lnr-briefcase"></i> <span>OS</span></a></li>
+											<li><a href="#section-2" class="icon-cup"><i class="lnr lnr-lighter"></i> <span>Database</span></a></li>
+											<li><a href="#section-3" class="icon-food"><i class="fa fa-cutlery"></i> <span>Language</span></a></li>
+											<li><a href="#section-4" class="icon-lab"><i class="fa fa-flask"></i> <span>Middleware</span></a></li>
+											<li><a href="#section-5" class="icon-truck"><i class="fa fa-truck"></i> <span>Blockchain</span></a></li>
+											<li><a href="#section-6" class="icon-truck"><i class="fa fa-truck"></i> <span>Others</span></a></li>
+										</ul>
+									</nav>
+									<div class="content tab">
+										<section id="section-1">
+											<div class="mediabox">
+												<i class="fa fa-coffee"></i>
+												<a href=""><h3>SUSE</h3></a>
+											</div>
+											<div class="mediabox">
+												<i class="fa fa-trophy"></i>
+												<a href=""><h3>RHEL</h3></a>
+											</div>
+											<div class="mediabox">
+												<i class="fa fa-leaf"></i>
+												<a href=""><h3>Ubuntu</h3></a>
+											</div>
+										</section>
+										<section id="section-2">
+											<div class="mediabox">
+												<i class="fa fa-trophy"></i>
+												<a href=""><h3>Mongodb</h3></a>
+											</div>
+											<div class="mediabox">
+												<i class="fa fa-coffee"></i>
+												<a href=""><h3>Mysql</h3></a>
+											</div>
+											<div class="mediabox">
+												<i class="fa fa-leaf"></i>
+												<a href=""><h3>Mariadb</h3></a>
+											</div>
+											<div class="mediabox">
+												<i class="fa fa-leaf"></i>
+												<a href=""><h3>CouchDB</h3></a>
+											</div>
+										</section>
+										<section id="section-3">
+											<div class="mediabox">
+												<i class="fa fa-leaf"></i>
+												<h3>Noodle Curry</h3>
+												<p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane earthnut pea tomato spring onion azuki bean gourd. </p>
+											</div>
+											<div class="mediabox">
+												<i class="fa fa-trophy"></i>
+												<h3>Leek Wasabi</h3>
+												<p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane earthnut pea tomato spring onion azuki bean gourd. </p>
+											</div>
+											<div class="mediabox">
+												<i class="fa fa-coffee"></i>
+												<h3>Green Tofu Wrap</h3>
+												<p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane earthnut pea tomato spring onion azuki bean gourd. </p>
+											</div>
+										</section>
+										<section id="section-4">
+											<div class="mediabox">
+												<i class="fa fa-trophy"></i>
+												<h3>Tomato Cucumber Curd</h3>
+												<p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane earthnut pea tomato spring onion azuki bean gourd. </p>
+											</div>
+											<div class="mediabox">
+												<i class="fa fa-coffee"></i>
+												<h3>Mushroom Green</h3>
+												<p>Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. Grape wattle seed kombu beetroot horseradish carrot squash brussels sprout chard.</p>
+											</div>
+											<div class="mediabox">
+												<i class="fa fa-leaf"></i>
+												<h3>Swiss Celery Chard</h3>
+												<p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane earthnut pea tomato spring onion azuki bean gourd. </p>
+											</div>
+										</section>
+										<section id="section-5">
+											<div class="mediabox">
+												<i class="fa fa-leaf"></i>
+												<h3>Radish Tomato</h3>
+												<p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane earthnut pea tomato spring onion azuki bean gourd. </p>
+											</div>
+											<div class="mediabox">
+												<i class="fa fa-trophy"></i>
+												<h3>Fennel Wasabi</h3>
+												<p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane earthnut pea tomato spring onion azuki bean gourd. </p>
+											</div>
+											<div class="mediabox">
+												<i class="fa fa-coffee"></i>
+												<h3>Red Tofu Wrap</h3>
+												<p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane earthnut pea tomato spring onion azuki bean gourd. </p>
+											</div>
+										</section>
+									</div><!-- /content -->
+								</div>
+								<!-- /tabs -->
+
+							</div>
+							<script src="js/cbpFWTabs.js"></script>
+							<script>
+								new CBPFWTabs( document.getElementById( 'tabs' ) );
+							</script>
+
+
+							<div class="clearfix"> </div>
+						</div>
+					</div>
+					<!--//tabs-inner-->
+
+
 					<div class="graph-visual">
-						<h2 class="inner-tittle">linux on z images </h2>
+						<h2 class="inner-tittle">Popular Images </h2>
 						<!--/gallery-->
 						<div class="gallery">
 																<!--
@@ -91,9 +220,19 @@
 																	{{/each}}
 																</div>
 
+
 						</div>
+
+
 					</div>
+
+
+
+
+
 				</div>
+
+
 				<!--//outer-wp-->
 
 				<!--//content-inner-->
