--- a/views/square.html
+++ b/views/square.html
@@ -67,7 +67,7 @@
 
 									<div class="buttons-ui">
 										<form>
-											<input type="text" style="width:250px;height:46px" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'input image name';}" class="text"/>
+											<input type="text" style="width:250px;height:46px" onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'under developing';}" class="text"/>
 
 										<a class="btn blue">Search</a>
 										</form>
@@ -83,7 +83,6 @@
 											<li><a href="#section-3" class="icon-food"><i class="fa fa-cutlery"></i> <span>Language</span></a></li>
 											<li><a href="#section-4" class="icon-lab"><i class="fa fa-flask"></i> <span>Middleware</span></a></li>
 											<li><a href="#section-5" class="icon-truck"><i class="fa fa-truck"></i> <span>Blockchain</span></a></li>
-											<li><a href="#section-6" class="icon-truck"><i class="fa fa-truck"></i> <span>Others</span></a></li>
 										</ul>
 									</nav>
 									<div class="content tab">
@@ -104,7 +103,7 @@
 										<section id="section-2">
 											<div class="mediabox">
 												<i class="fa fa-trophy"></i>
-												<a href=""><h3>Mongodb</h3></a>
+												<a href="/table?id=0001&name=MongoDB"><h3>Mongodb</h3></a>
 											</div>
 											<div class="mediabox">
 												<i class="fa fa-coffee"></i>
@@ -122,52 +121,33 @@
 										<section id="section-3">
 											<div class="mediabox">
 												<i class="fa fa-leaf"></i>
-												<h3>Noodle Curry</h3>
-												<p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane earthnut pea tomato spring onion azuki bean gourd. </p>
+												<a href=""><h3>Nodejs</h3></a>
+
 											</div>
 											<div class="mediabox">
 												<i class="fa fa-trophy"></i>
-												<h3>Leek Wasabi</h3>
-												<p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane earthnut pea tomato spring onion azuki bean gourd. </p>
-											</div>
-											<div class="mediabox">
-												<i class="fa fa-coffee"></i>
-												<h3>Green Tofu Wrap</h3>
-												<p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane earthnut pea tomato spring onion azuki bean gourd. </p>
+												<a href=""><h3>Golang</h3></a>
+
 											</div>
 										</section>
 										<section id="section-4">
 											<div class="mediabox">
 												<i class="fa fa-trophy"></i>
-												<h3>Tomato Cucumber Curd</h3>
-												<p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane earthnut pea tomato spring onion azuki bean gourd. </p>
+												<a href=""><h3>Nginx</h3></a>
 											</div>
 											<div class="mediabox">
 												<i class="fa fa-coffee"></i>
-												<h3>Mushroom Green</h3>
-												<p>Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori. Grape wattle seed kombu beetroot horseradish carrot squash brussels sprout chard.</p>
+												<a href=""><h3>HAProxy</h3></a>
 											</div>
 											<div class="mediabox">
 												<i class="fa fa-leaf"></i>
-												<h3>Swiss Celery Chard</h3>
-												<p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane earthnut pea tomato spring onion azuki bean gourd. </p>
+												<a href=""><h3>Redis</h3></a>
 											</div>
 										</section>
 										<section id="section-5">
 											<div class="mediabox">
 												<i class="fa fa-leaf"></i>
-												<h3>Radish Tomato</h3>
-												<p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane earthnut pea tomato spring onion azuki bean gourd. </p>
-											</div>
-											<div class="mediabox">
-												<i class="fa fa-trophy"></i>
-												<h3>Fennel Wasabi</h3>
-												<p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane earthnut pea tomato spring onion azuki bean gourd. </p>
-											</div>
-											<div class="mediabox">
-												<i class="fa fa-coffee"></i>
-												<h3>Red Tofu Wrap</h3>
-												<p>Chickweed okra pea winter purslane coriander yarrow sweet pepper radish garlic brussels sprout groundnut summer purslane earthnut pea tomato spring onion azuki bean gourd. </p>
+												<a href=""><h3>Hyperledger</h3></a>
 											</div>
 										</section>
 									</div><!-- /content -->
