--- a/views/table.html
+++ b/views/table.html
@@ -68,8 +68,8 @@
 																	<tbody>
 																		<tr>
 																			<th scope="row">1</th>
-																			<td>RHEL 7</td>
-																			<td>latest</td>
+																			<td>null</td>
+																			<td>null</td>
 																			<td>docker pull {{image}}</td>
 																		</tr>
 																	</tbody>
